--- a/provision/ansible/roles/docker/tasks/Ubuntu/add_docker_repository.yml
+++ b/provision/ansible/roles/docker/tasks/Ubuntu/add_docker_repository.yml
@@ -1,10 +1,10 @@
-- name: Add repository
-  apt_repository:
-    repo: https://download.docker.com/linux/ubuntu bionic stable
-    state: present
-    update_cache: yes
-
 - name: Add gpg key
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
     state: present
+
+- name: Add repository
+  apt_repository:
+    repo: deb https://download.docker.com/linux/ubuntu bionic stable
+    state: present
+    update_cache: yes
