--- a/provision/ansible/roles/docker/tasks/Ubuntu/add_docker_repository.yml
+++ b/provision/ansible/roles/docker/tasks/Ubuntu/add_docker_repository.yml
@@ -5,6 +5,6 @@
 
 - name: Add repository
   apt_repository:
-    repo: deb https://download.docker.com/linux/ubuntu bionic stable
+    repo: deb https://download.docker.com/linux/ubuntu bionic test
     state: present
     update_cache: yes
