--- a/provision/ansible/roles/docker/tasks/main.yml
+++ b/provision/ansible/roles/docker/tasks/main.yml
@@ -4,3 +4,4 @@
 - include_vars: "{{ ansible_distribution }}/main.yml"
 - include_tasks: "{{ ansible_distribution }}/add_docker_repository.yml"
 - include_tasks: install_docker.yml
+- include_tasks: install_docker_compose.yml
